# Tobias_assistente_Pessoal

./: .gitignore  README.md  list_gemini.py  list_models.py  main.py  test_pro.py
.agent/skills/: validator.py
.agent/skills/pesquisa_web/: SKILL.md
.agent/skills/relatorios/: SKILL.md
Tobias/: .env_exemplo  README.md  check_error.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  test_weather.py
Tobias/.agent/skills/: calculator.py  search.py  security.py
Tobias/app/config/: models.py
Tobias/app/router/: model_selector.py
Tobias/app/tools/: weather_tool.py
Tobias/core/: document_parser.py  graph.py
app/clients/: llm_client.py
app/router/: model_selector.py
core/: __init__.py  graph.py  memory.py  utils.py
prompts/: agente.md
